# crown

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  biome.jsonc  build.rs  release-please-config.json  typos.toml
.github/: dependabot.yml
benches/: aes.rs  aes_ctr.rs  aes_gcm.rs  chacha20.rs  chacha20poly1305.rs  des.rs  des_ctr.rs  md5.rs  rc4.rs  sha256.rs  sha3.rs  sha512.rs  twofish.rs  xchacha20poly1305.rs  xor.rs
bindings/c/: Cargo.toml  build.rs  cbindgen.toml
bindings/c/include/: crown.h  kittycrypto.h
bindings/c/src/: evp_aead.rs  evp_block.rs  evp_hash.rs  evp_stream.rs  lib.rs
crates/crown-bin/: Cargo.toml
crates/crown-bin/src/: main.rs
crates/crown-bin/src/runner/: dec.rs
crates/crown-derive/: Cargo.toml
crown/: Cargo.toml  build.rs  tsconfig.json
crown-bin/: Cargo.toml  build.rs
crown-bin/src/: args.rs  main.rs  size.pest  size_parser.rs
crown-bin/src/args/: enc.rs  hash.rs  jsasm.rs
crown-bin/src/runner/: dec.rs  enc.rs  hash.rs  rand.rs
crown-bin/src/utils/io/: unix.rs
crown-cabi/: Cargo.toml  build.rs  cbindgen.toml
crown-cabi/include/: crown.h
crown-cabi/src/: evp_aead.rs  evp_block.rs  evp_stream.rs
crown-derive/: Cargo.toml
crown-derive/src/: js_engine.rs  lib.rs
crown-derive/src/js_engine/: compute.rs
crown-jsasm/: Cargo.toml
crown-jsasm/preload/: index.js  index.ts  x86_64-xlate.ts
crown-jsasm/src/: bundler.rs  context.rs  imp.rs  lib.rs
crown-jsasm/src/bundler/: hook.rs  loader.rs
crown-wasm/: Cargo.toml  jsr.json
crown-wasm/src/: evp_aead.rs  evp_block.rs  evp_hash.rs  evp_stream.rs  lib.rs
crown/@types/: index.ts
crown/benches/: aes.rs  aes_ctr.rs  chacha20.rs  chacha20poly1305.rs  des.rs  des_ctr.rs  md5.rs  rc4.rs  sha256.rs  sha512.rs  twofish.rs  xchacha20poly1305.rs  xor.rs
crown/src/: error.rs  lib.rs
crown/src/aead/: mod.rs
crown/src/aead/ccm/: mod.rs
crown/src/aead/chacha20poly1305/: asm.rs  chacha20_poly1305_x86_64-linux.S  generic.rs  mod.rs  tests.rs  x86_64-xlate.js  x86_64.js  x86_64.rs  xchacha20poly1305.rs
crown/src/aead/chacha20poly1305/x86_64-xlate/: cfi-directive.js  const.js  directive.js  ea.js  expr.js  index.js  label.js  opcode.js  register.js  seh-directive.js  translator.js
crown/src/aead/eax/: mod.rs  tests.rs
crown/src/aead/gcm/: mod.rs  tests.rs
crown/src/aead/ocb3/: mod.rs  tests.rs
crown/src/block/: mod.rs
crown/src/block/aes/: consts.rs  ctr.rs  mod.rs  noasm.rs  tests.rs  x86_64.rs
crown/src/block/aes/cbc/: decrypt.rs  encrypt.rs  mod.rs
crown/src/block/aes/gcm/: cmac.rs  ctrkdf.rs  ghash.rs  mod.rs  nonces.rs
crown/src/block/anubis/: mod.rs  tests.rs
crown/src/block/aria/: mod.rs  tests.rs
crown/src/block/blowfish/: mod.rs  tests.rs
crown/src/block/camellia/: mod.rs  tests.rs
crown/src/block/cast5/: mod.rs  tests.rs
crown/src/block/des/: block.rs  cipher.rs  consts.rs  tests.rs
crown/src/block/idea/: mod.rs  tests.rs
crown/src/block/kasumi/: mod.rs  tests.rs
crown/src/block/khazad/: mod.rs  tests.rs
crown/src/block/kseed/: mod.rs  test.rs
crown/src/block/multi2/: mod.rs  tests.rs
crown/src/block/noekeon/: mod.rs  tests.rs
crown/src/block/rc2/: mod.rs  tests.rs
crown/src/block/rc5/: generic.rs  mod.rs  tests.rs
crown/src/block/rc6/: mod.rs  tests.rs
crown/src/block/safer/: cipher.rs  consts.rs  mod.rs  tests.rs
crown/src/block/serpent/: mod.rs  tests.rs
crown/src/block/skipjack/: mod.rs  tests.rs
crown/src/block/sm4/: mod.rs  tests.rs
crown/src/block/tea/: mod.rs  tests.rs
crown/src/block/twofish/: mod.rs  tests.rs
crown/src/block/xtea/: block.rs  mod.rs  tests.rs
crown/src/core/: mod.rs
crown/src/cuda/: error.rs  mem.rs  mod.rs
crown/src/cuda/mem/: device_memory.rs  pined_memory.rs
crown/src/envelope/: evp_aead.rs  evp_stream.rs
crown/src/envelope/evp_block/: mod.rs  tests.rs
crown/src/hash/: mod.rs
crown/src/hash/blake2b/: mod.rs  noasm.rs  tests.rs  variable.rs
crown/src/hash/blake2s/: generic.rs  mod.rs  noasm.rs  tests.rs  variable.rs
crown/src/hash/md2/: mod.rs  tests.rs
crown/src/hash/md4/: block.rs  mod.rs  tests.rs
crown/src/hash/md5/: block.rs  mod.rs  tests.rs
crown/src/hash/md5/block/: asm.rs  x86_64.js  x86_64.ts
crown/src/hash/sha1/: block.rs  mod.rs  tests.rs
crown/src/hash/sha256/: mod.rs  sha256.cu  tests.rs
crown/src/hash/sha3/: digest.rs  keccakf.rs  mod.rs  shake.rs  tests.rs
crown/src/hash/sha512/: mod.rs  noasm.rs  tests.rs
crown/src/hash/sm3/: mod.rs
crown/src/kdf/: mod.rs
crown/src/kdf/hkdf/: mod.rs
crown/src/mac/hmac/: imp.rs  mod.rs  tests.rs
crown/src/mac/poly1305/: sum.rs
crown/src/mac/poly1305/sum/: asm.rs
crown/src/modes/: mod.rs
crown/src/modes/cbc/: decrypter.rs  encryptor.rs  mod.rs
crown/src/modes/cbc/tests/: aes_test.rs  mod.rs
crown/src/modes/cfb/: mod.rs
crown/src/modes/ctr/: mod.rs  tests.rs
crown/src/modes/ecb/: mod.rs
crown/src/modes/ofb/: mod.rs  tests.rs
crown/src/padding/: block_padding.rs  mod.rs
crown/src/password_hash/argon2/: blake2_hash.rs  blamka_generic.rs  mod.rs  tests.rs
crown/src/password_hash/bcrypt/: mod.rs
crown/src/simd/: mod.rs
crown/src/stream/: mod.rs
crown/src/stream/chacha20/: mod.rs  tests.rs
crown/src/stream/chacha20/xor_key_stream/: mod.rs
crown/src/stream/rabbit/: mod.rs  tests.rs
crown/src/stream/rc4/: mod.rs
crown/src/stream/rc4/xor_key_stream/: asm.rs  generic.rs  mod.rs  x86_64.ts
crown/src/stream/sala20/: mod.rs  sala20_ref.rs
crown/src/stream/salsa20/: hsalsa20.rs  mod.rs  noasm.rs  tests.rs
crown/src/stream/sober128/: mod.rs  tests.rs
crown/src/stream/sosemanuk/: mod.rs  tests.rs
crown/src/utils/: mod.rs
crown/src/utils/cpuid/: mod.rs  x86_64.ts
crown/src/utils/entropy/: mod.rs
crown/src/utils/subtle/: xor.rs
crown/src/utils/sysrand/: getrandom.rs
crown/tests/: aead.rs  hash.rs  hkdf.rs  hmac.rs  ind_cpa.rs  interop_boring.rs  pyca_aead.rs  pyca_block.rs  pyca_stream.rs
crown/tests/wycheproof/: aead.json  aead.rs  hkdf.json  hkdf.rs  ind_cpa.rs  ind_cpa_test_schema.json  mac.json  mac.rs  mod.rs
(+375 files in other folders)
