[workspace]
resolver = "2"
members = ["crown", "crown-bin", "crown-cabi", "crown-derive"]

[profile.relwithdebinfo]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
paste = "1.0.15"
crown = { path = "./crown", version = "0.3.0" }
crown-derive = { path = "./crown-derive", version = "0.3.0" }
