[workspace]
resolver = "2"
members = ["crown", "crown-bin", "crown-cabi", "crown-derive"]
package.version = "0.4.0"
package.edition = "2021"
package.description = "A cryptographic library."
package.license = "Apache-2.0"
package.readme = "./README.md"
package.keywords = ["cryptography", "crypto", "encryption", "hashing", "cuda"]
package.categories = ["cryptography", "algorithms", "science"]
package.repository = "https://github.com/cathaysia/crown"

[profile.relwithdebinfo]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
paste = "1.0.15"
crown = { path = "./crown", version = "0.4.0" }
crown-derive = { path = "./crown-derive", version = "0.4.0" }
