[package]
name = "crown-bin"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["asm"]
asm = ["crown/asm"]
cuda = ["crown/cuda"]

[[bin]]
name = "crown"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
crown = { workspace = true, features = ["unstable"] }
crown-jsasm = { workspace = true }
paste = "1.0.15"
rayon = "1.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["strum_macros"] }
strum_macros = "0.27"
libc = "0.2"
pest = "2.8.2"
pest_derive = "2.8.2"
nix = "0.30.1"
