[package]
name = "crown-cabi"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
name = "crown"

[features]
default = ["asm"]
cbindgen = []
asm = ["crown/asm"]

[dependencies]
crown = { workspace = true }
paste.workspace = true

[build-dependencies]
cbindgen = "0.29"
toml = "0.9"
