[package]
name = "crown-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["cryptography", "crypto", "procedural-macros", "derive"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
serde_json = "1.0"
darling = "0.21.3"
proc-macro2 = "1.0.101"
anyhow.workspace = true
crown-jsasm.workspace = true
