[package]
name = "crown-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["cryptography", "crypto", "procedural-macros", "derive"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
jsasm = ["dep:crown-jsasm"]

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104" }
darling = { version = "0.21.3", default-features = false }
proc-macro2 = "1.0.101"
crown-jsasm = { workspace = true, optional = true }
