[package]
name = "crown-jsasm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
boa_engine = "0.20.0"
boa_runtime = "0.20.0"
swc_common = { version = "=17.0.0", features = ["tty-emitter"] }
swc_ecma_ast = "=18.0.0"
swc_bundler = "=35.0.0"
serde.workspace = true
swc_ecma_parser = "=27.0.2"
swc_ecma_loader = { version = "=17.0.0", features = [
  "node",
  "lru",
  "parking_lot",
] }
swc_atoms = "=9.0.0"
swc_compiler_base = "=39.0.0"
swc_ecma_transforms = { version = "=38.0.0", features = ["typescript"] }
swc_ecma_transforms_base = "30.0.0"
swc_ecma_codegen = "20.0.0"
rustc-hash = "2.1.1"
