[package]
name = "crown-jsasm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
boa_engine = "0.20.0"
boa_runtime = "0.20.0"
swc_common = { version = "=21.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "=23.0.0"
swc_bundler = "=48.0.0"
serde.workspace = true
swc_ecma_parser = { version = "=39.1.0", default-features = false }
swc_ecma_loader = { version = "=21.0.0", features = [
  "node",
  "lru",
  "parking_lot",
] }
swc_atoms = "=9.0.0"
swc_compiler_base = "=55.0.0"
swc_ecma_transforms = { version = "=52.0.0", features = ["typescript"] }
swc_ecma_transforms_base = "42.0.1"
swc_ecma_codegen = "26.0.1"
rustc-hash = "2.1.1"
