[package]
name = "crown-wasm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crown = { path = "../crown", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2.104"
js-sys = "0.3"
paste.workspace = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]
