[package]
name = "crown"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
exclude = ["tests"]

[features]
default = ["std"]
## Enable std
std = ["alloc"]
## Enable alloc
alloc = []
## Enable Cuda. (Experimental)
cuda = []
## regenerate cuda sys.rs
bindgen = ["dep:bindgen"]
## Enable asm support. (Experimental)
asm = []
## Enable experimental features
unstable = []

[dependencies]
paste = { workspace = true }
crown-derive = { workspace = true }
thiserror = "2.0.12"
bytes = "1.10.1"
base64 = "0.22.1"
libc = "0.2.175"
nix = "0.30.1"
document-features = "0.2.11"
tinyvec = "1.10.0"
block-padding = "0.3.3"

[build-dependencies]
cc = "1.2.34"
bindgen = { version = "0.72.1", optional = true }
toml = { version = "0.9.5", optional = true }
bitflags = "2.9.4"

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.7", features = ["html_reports"] }
md5 = "0.8.0"
rc4 = "0.1.0"
cipher = "0.4.4"
sha2 = "0.10.9"
aes = "0.8.4"
ctr = "0.9.2"
des = "0.8.1"
chacha20 = "0.9.1"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
ring = "0.17.14"
sha3 = "0.10.8"
hmac = "0.12.1"
md4 = "0.10.2"
twofish = "0.7.1"
xtea = "0.0.1-pre.0"
cast5 = "0.11.1"
cbc = "0.1.2"
sha1 = "0.10.6"
digest = "0.10.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
typify = "0.4.2"
blake2 = "0.10.6"
anyhow = "1.0.99"
aes-gcm = "0.10.3"
boring = "4.19.0"

[[bench]]
name = "md5"
harness = false

[[bench]]
name = "rc4"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "sha512"
harness = false

[[bench]]
name = "sha3"
harness = false

[[bench]]
name = "aes"
harness = false

[[bench]]
name = "des"
harness = false


[[bench]]
name = "xor"
harness = false

[[bench]]
name = "chacha20"
harness = false

[[bench]]
name = "chacha20poly1305"
harness = false

[[bench]]
name = "xchacha20poly1305"
harness = false
