[package]
name = "crown_c"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "crown"

[features]
default = ["asm"]
cbindgen = []
asm = ["crown/asm"]

[dependencies]
crown = { path = "../../", default-features = false, features = ["std"] }
paste.workspace = true

[build-dependencies]
cbindgen = "0.29"
toml = "0.9"
