[package]
name = "crown-bin"
version = "0.2.4"
edition = "2024"
description = "crown cryptographic library cli tool"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["cryptography", "crypto", "procedural-macros", "derive"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/cathaysia/crown"

[features]
default = ["asm"]
asm = ["crown/asm"]
cuda = ["crown/cuda"]

[[bin]]
name = "crown"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
crown = { path = "../../", default-features = false, features = [
  "std",
], version = "0.2.4" }
paste = "1.0.15"
rayon = "1.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["strum_macros"] }
strum_macros = "0.27"
libc = "0.2"
pest = "2.8.2"
pest_derive = "2.8.2"
nix = "0.30.1"
