[package]
name = "crown-derive"
version = "0.2.4"
edition = "2021"
description = "Procedural macros for the crown cryptographic library"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["cryptography", "crypto", "procedural-macros", "derive"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/cathaysia/crown"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
minijinja = { version = "2.11.0", features = ["json"] }
serde_json = "1.0"
darling = "0.21.3"
proc-macro2 = "1.0.101"
